--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,2 @@
-body{background-color:aquamarine}div{background-color:red}
+body{background-color:aquamarine}div{background-color:blue}
 /*# sourceMappingURL=main.css.map */
